--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,7 @@ h1 {
 }
 .nft-art {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
 }
