--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,23 @@ nav .nav-bar li a {
   font-style: italic;
   text-decoration: none;
   color: #fff;
+  position: relative;
+}
+nav .nav-bar li a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #e70f36;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 250ms ease-in;
+}
+nav .nav-bar li a:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 .logo img {
   width: 200px;
@@ -67,6 +84,10 @@ nav .nav-bar li a {
 input::placeholder {
   color: #fff;
 }
+.search-bar:active {
+  border: 1px solid #e70f36;
+  color: #e70f36;
+}
 .search-bar button {
   cursor: pointer;
   background: #1a222fba;
@@ -85,12 +106,36 @@ input::placeholder {
   color: #000000;
   padding: 8px;
   border: 0;
+  position: relative;
+  z-index: 1;
+}
+.btn-primary::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background-color: #e70f36;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 250ms ease-in;
+}
+.btn-primary:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+.btn-primary:hover {
+  color: #fff;
+  transform: scale(1.09);
 }
 button {
   cursor: pointer;
 }
 header .btn-primary {
   font-family: "Lora", serif;
+  font-size: 14px;
 }
 .intro-sect {
   display: flex;
@@ -127,6 +172,13 @@ h1 {
   border: 1px solid #fff;
   color: #e70f36;
   background-color: #fff;
+}
+.fa-play:hover {
+  transform: scale(1.09);
+  background-color: #e70f36;
+  color: #ffffff;
+  border: none;
+  transition: transform 250ms;
 }
 .explore-watch {
   display: flex;
@@ -219,6 +271,26 @@ h1 {
   -webkit-backdrop-filter: blur(8.8px);
   border: 1px solid none;
 }
+.btn-secondary:before{
+    content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background-color: #FFFFFF;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 250ms ease-in;
+}
+.btn-secondary:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+.btn-secondary:hover{
+  color: #e70f36;
+}
 .nft-art {
   display: flex;
   justify-content: space-evenly;
@@ -226,12 +298,17 @@ h1 {
   flex-wrap: wrap;
 }
 .nft-art .collection {
+  cursor: pointer;
   padding: 15px 15px 30px 15px;
   width: 270px;
   margin-bottom: 50px;
   border-radius: 0px;
   background: #1e2a38;
   box-shadow: 5px 5px 10px #0c1116, -5px -5px 10px #30435a;
+}
+.nft-art .collection:hover{
+  transform: scale(0.95);
+  transition: transform 400ms;
 }
 .collection .nft-img img {
   width: 100%;
@@ -288,4 +365,32 @@ h1 {
   margin-left: 10px;
   font-size: 14px;
   font-weight: lighter;
+}
+.see-all-btn {
+text-align: center;
+}
+.get-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 10px;
+  grid-auto-rows: 90px;
+}
+.get-row img {
+  cursor: pointer;
+}
+.item-1{
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+.item-2 {
+   grid-column: 2/3;
+  grid-row: 1/3;
+}
+.item-3{
+   grid-column: 2/3;
+  grid-row: 3/6;
+}
+.item-4{
+   grid-column: 3/4;
+  grid-row: 2/4;
 }
