--- a/styles.css
+++ b/styles.css
@@ -271,15 +271,15 @@ h1 {
   -webkit-backdrop-filter: blur(8.8px);
   border: 1px solid none;
 }
-.btn-secondary:before{
-    content: "";
+.btn-secondary:before {
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   z-index: -1;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 250ms ease-in;
@@ -288,7 +288,7 @@ h1 {
   transform: scaleX(1);
   transform-origin: left;
 }
-.btn-secondary:hover{
+.btn-secondary:hover {
   color: #e70f36;
 }
 .nft-art {
@@ -306,7 +306,7 @@ h1 {
   background: #1e2a38;
   box-shadow: 5px 5px 10px #0c1116, -5px -5px 10px #30435a;
 }
-.nft-art .collection:hover{
+.nft-art .collection:hover {
   transform: scale(0.95);
   transition: transform 400ms;
 }
@@ -367,30 +367,31 @@ h1 {
   font-weight: lighter;
 }
 .see-all-btn {
-text-align: center;
+  text-align: center;
 }
-.get-row {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 10px;
-  grid-auto-rows: 90px;
+.outro-sect {
+  display: flex;
+  margin: 3em 0;
+}
+.outro-sect .outro {
+
+}
+.get-row{
+  position: relative;
 }
 .get-row img {
   cursor: pointer;
 }
-.item-1{
-  grid-column: 1/2;
-  grid-row: 2/4;
+.item2 {
+  display: flex;
+  gap: 260px;
 }
-.item-2 {
-   grid-column: 2/3;
-  grid-row: 1/3;
-}
-.item-3{
-   grid-column: 2/3;
-  grid-row: 3/6;
-}
-.item-4{
-   grid-column: 3/4;
-  grid-row: 2/4;
+.item1 {
+  position: absolute;
+  left: 230px;
+  top: -100px;
+  bottom: px;
+  display: flex;
+  flex-direction: column;
+  gap:200px;
 }
